--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "https://github.com/paypal/Checkout-PHP-SDK/blob/master/LICENSE",
     "homepage": "http://github.com/paypal/Checkout-PHP-SDK/",
     "require": {
-        "paypal/paypalhttp": "1.0.1"
+        "paypal/paypalhttp": "master"
     },
     "authors": [
         {
@@ -31,5 +31,11 @@
     "scripts": {
         "unit": "phpunit --testsuite unit",
         "integration": "phpunit --testsuite integration"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/andyts93/paypalhttp_php.git"
+        }
+    ]
 }
