--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "Apache-2.0",
     "homepage": "http://github.com/paypal/Checkout-PHP-SDK/",
     "require": {
-        "paypal/paypalhttp": "master"
+        "andyts93/paypalhttp": "1.0.2"
     },
     "authors": [
         {
